<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView style="@style/FindMyPhoneText.SubTitle"
        android:text="@string/permissions"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/main_activity_text_fine_location"
            style="@style/FindMyPhoneText.Permission"
            android:text="@string/access_fine_location" />

        <ImageView
            android:id="@+id/main_activity_image_fine_location"
            style="@style/FindMyPhoneImageView.Permission" />
    </LinearLayout>

    <LinearLayout
        style="@style/LinearLayout.Slice"
        tools:ignore="UseCompoundDrawables">

        <TextView
            android:id="@+id/main_activity_text_background_location"
            style="@style/FindMyPhoneText.Permission"
            android:text="@string/access_background_location" />

        <ImageView
            android:id="@+id/main_activity_image_background_location"
            style="@style/FindMyPhoneImageView.Permission" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_activity_text_send_sms"
            style="@style/FindMyPhoneText.Permission"
            android:text="@string/receive_sms" />

        <ImageView
            android:id="@+id/main_activity_image_send_sms"
            style="@style/FindMyPhoneImageView.Permission" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_activity_text_receive_sms"
            style="@style/FindMyPhoneText.Permission"
            android:text="@string/send_sms" />

        <ImageView
            android:id="@+id/main_activity_image_receive_sms"
            style="@style/FindMyPhoneImageView.Permission" />
    </LinearLayout>

    <TextView style="@style/FindMyPhoneText.SubTitle"
        android:text="@string/gps_network"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_activity_text_gps"
            style="@style/FindMyPhoneText.Permission"
            android:text="@string/gps_enable" />

        <ImageView
            android:id="@+id/main_activity_image_gps"
            style="@style/FindMyPhoneImageView.Permission" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/main_activity_text_network"
            style="@style/FindMyPhoneText.Permission"
            android:text="@string/network_access" />

        <ImageView
            android:id="@+id/main_activity_image_network"
            style="@style/FindMyPhoneImageView.Permission" />
    </LinearLayout>

</LinearLayout>